--- a/example2/src/app.html
+++ b/example2/src/app.html
@@ -11,7 +11,7 @@
 
     <meta name="google-site-verification" content="jALyHNVGAUqXG6Ev3lUJQGAJQ-DZDxxrc95u5apsT-s" />
 
-    <link rel="icon" type="image/png" href="./favicon.png" />
+    <link rel="icon" type="image/png" href="svrollbar/favicon.png" />
     %svelte.head%
   </head>
   <body>
